--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- ABOUT SECTION -->
     <section id="about">
         <div class="about-container">
-            <img src="your-photo.jpg" alt="Singh Shubham Sarvadeo" class="profile-pic" />
-            <h1 class="name">SINGH SHUBHAM SARVADEO <span class="name-guj">સિંહ શుభમ સર્વદેઓ</span></h1>
+            <img src="shubham.png" alt="Singh Shubham Sarvadeo" class="profile-pic" />
+            <h1 class="name">SINGH SHUBHAM SARVADEO <span class="name-guj">સિંહ શુભમ સર્વદેવ/span></h1>
             <p class="tagline">Hello! I'm a passionate researcher, academic enthusiast, and lifelong learner.</p>
             <div class="about-text">
                 <p>
