--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="about">
         <div class="about-container">
             <img src="shubham.png" alt="Singh Shubham Sarvadeo" class="profile-pic" />
-            <h1 class="name">SINGH SHUBHAM SARVADEO <span class="name-guj">સિંહ શુભમ સર્વદેવ/span></h1>
+            <h1 class="name">SINGH SHUBHAM SARVADEO <span class="name-guj">સિંહ શુભમ સર્વદેવ</span></h1>
             <p class="tagline">Hello! I'm a passionate researcher, academic enthusiast, and lifelong learner.</p>
             <div class="about-text">
                 <p>
