--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
 <body>
 
+
+          <!-- DARK MODE TOGGLE -->
+      <div class="toggle-container">
+        <label class="switch">
+          <input type="checkbox" id="darkModeToggle" />
+          <span class="slider round"></span>
+        </label>
+        <span class="toggle-label">Dark Mode</span>
+      </div>
+
     <!-- ABOUT SECTION -->
     <section id="about">
         <div class="about-container">
@@ -22,18 +32,24 @@
                         Electronics Limited</strong>, Ghaziabad — a premier R&D institution under the <strong>Ministry
                         of Defence, Government of India</strong>.
                 </p>
+                
                 <p>
-                    My research interests lie in <strong>Artificial Intelligence and its Applications</strong>,
-                    especially at the intersection of defense, embedded systems, and intelligent automation. I’m driven
-                    by curiosity and the desire to build solutions that positively impact society.
+                  My interests lie in <strong>Artificial Intelligence</strong>, its practical applications, <strong>computer vision</strong>, and <strong>machine learning</strong>. I also enjoy building solutions through <strong>Android programming</strong> and hands-on software development.
                 </p>
+                
                 <p>
-                    Outside of work, I enjoy writing, exploring ideas through photography, and building tech projects
-                    that connect theory with the real world.
+                  I believe in continuous learning and enjoy working on projects that bridge ideas and implementation.
                 </p>
             </div>
         </div>
     </section>
+
+    <script>
+    const toggle = document.getElementById('darkModeToggle');
+    toggle.addEventListener('change', () => {
+      document.body.classList.toggle('dark-mode');
+    });
+  </script>
 
 </body>
 
