--- a/index.html
+++ b/index.html
@@ -44,12 +44,28 @@
         </div>
     </section>
 
-    <script>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
     const toggle = document.getElementById('darkModeToggle');
+
+    // Load preference from localStorage if available
+    if (localStorage.getItem('theme') === 'dark') {
+      document.body.classList.add('dark-mode');
+      toggle.checked = true;
+    }
+
     toggle.addEventListener('change', () => {
-      document.body.classList.toggle('dark-mode');
+      if (toggle.checked) {
+        document.body.classList.add('dark-mode');
+        localStorage.setItem('theme', 'dark');
+      } else {
+        document.body.classList.remove('dark-mode');
+        localStorage.setItem('theme', 'light');
+      }
     });
-  </script>
+  });
+</script>
+
 
 </body>
 
