--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Singh Shubham Sarvadeo - Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+
+    /* Add these to your head section in HTML */
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Gujarati:wght@400;500&display=swap');
 </head>
 
 <body>
