--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="toggle-container">
         <label class="switch">
             <input type="checkbox" id="darkModeToggle" />
-            <span class="slider round"></span>
+          <span class="slider"></span>
         </label>
         <span class="toggle-label">Dark Mode</span>
     </div>
