--- a/index.html
+++ b/index.html
@@ -42,6 +42,45 @@
         </div>
     </section>
 
+    <!-- EDUCATION SECTION -->
+<section id="education">
+    <h2 class="section-title">Education</h2>
+    <div class="education-timeline">
+
+        <!-- IIT Hyderabad -->
+        <div class="edu-card">
+            <img src="iith.jpeg" alt="IIT Hyderabad" class="edu-logo" />
+            <div class="edu-content">
+                <h3>B.Tech in Computer Science & Engineering <span class="note">(Visiting/Exchange Student)</span></h3>
+                <p class="edu-inst">Indian Institute of Technology Hyderabad</p>
+                <p class="edu-years">2024 – 2025</p>
+            </div>
+        </div>
+
+        <!-- NIT Srinagar -->
+        <div class="edu-card">
+            <img src="nits.jpeg" alt="NIT Srinagar" class="edu-logo" />
+            <div class="edu-content">
+                <h3>B.Tech in Computer Science & Engineering <span class="note">(Gold Medalist)</span></h3>
+                <p class="edu-inst">National Institute of Technology Srinagar</p>
+                <p class="edu-years">2021 – 2024</p>
+            </div>
+        </div>
+
+        <!-- Marothia School -->
+        <div class="edu-card">
+            <img src="marothia.jpeg" alt="Marothia English Medium School" class="edu-logo" />
+            <div class="edu-content">
+                <h3>Secondary & Higher Secondary</h3>
+                <p class="edu-inst">Marothia English Medium School, Dungra, Vapi</p>
+                <p class="edu-years">2018 – 2021</p>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const toggle = document.getElementById('darkModeToggle');
