--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         </div>
     </section>
 
-    <!-- EDUCATION SECTION -->
+<!-- EDUCATION SECTION -->
 <section id="education">
     <h2 class="section-title">Education</h2>
     <div class="education-timeline">
 
         <!-- IIT Hyderabad -->
         <div class="edu-card">
-            <img src="iith.jpeg" alt="IIT Hyderabad" class="edu-logo" />
+            <img src="iith.jpeg" alt="IIT Hyderabad" class="edu-photo" />
             <div class="edu-content">
                 <h3>B.Tech in Computer Science & Engineering <span class="note">(Visiting/Exchange Student)</span></h3>
                 <p class="edu-inst">Indian Institute of Technology Hyderabad</p>
@@ -60,7 +60,7 @@
 
         <!-- NIT Srinagar -->
         <div class="edu-card">
-            <img src="nits.jpeg" alt="NIT Srinagar" class="edu-logo" />
+            <img src="nits.jpeg" alt="NIT Srinagar" class="edu-photo" />
             <div class="edu-content">
                 <h3>B.Tech in Computer Science & Engineering <span class="note">(Gold Medalist)</span></h3>
                 <p class="edu-inst">National Institute of Technology Srinagar</p>
@@ -70,7 +70,7 @@
 
         <!-- Marothia School -->
         <div class="edu-card">
-            <img src="marothia.jpeg" alt="Marothia English Medium School" class="edu-logo" />
+            <img src="marothia.jpeg" alt="Marothia School" class="edu-photo" />
             <div class="edu-content">
                 <h3>Secondary & Higher Secondary</h3>
                 <p class="edu-inst">Marothia English Medium School, Dungra, Vapi</p>
@@ -80,6 +80,7 @@
 
     </div>
 </section>
+
 
 
 <script>
